fix(tabs): correct keyboard tab focus order and restore visible focus outline (fixes #40, #41)

--- a/src/tabs/style.scss
+++ b/src/tabs/style.scss
@@ -126,8 +126,9 @@
 			}
 		}
 
-		&:focus {
-			outline: none;
+		&:focus-visible {
+			outline: 2px solid currentColor;
+			outline-offset: 2px;
 		}
 
 		&:hover {
